[STYLE] Refactor inventory list and items in list stylings

--- a/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
+++ b/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
@@ -13,7 +13,7 @@
 <ng-template #notLoading>
 
     <div class="flex-center card-wrapper" *ngIf="item; else notFound">
-        <mat-card class="material-card-element">
+        <mat-card class="material-card-element-no-padding">
             <!-- Header -->
             <mat-card-header>
                 <mat-card-title>
