--- a/ng-diogenes/src/styles.scss
+++ b/ng-diogenes/src/styles.scss
@@ -13,3 +13,5 @@ body {
 @import './styles/alignment';
 @import './styles/components';
 @import './styles/borders';
+@import './styles/interaction';
+@import './styles/texts';
