--- a/ng-diogenes/src/app/pages/inventory/components/inventory-filter/select-filter/select-filter.component.html
+++ b/ng-diogenes/src/app/pages/inventory/components/inventory-filter/select-filter/select-filter.component.html
@@ -1,4 +1,4 @@
-<div class="text-filter-wrapper" *ngIf="filterName && control && options">
+<div *ngIf="filterName && control && options">
 
     <mat-form-field>
 
