--- a/ng-diogenes/src/app/pages/inventory/components/item-in-list/item-in-list.component.html
+++ b/ng-diogenes/src/app/pages/inventory/components/item-in-list/item-in-list.component.html
@@ -1,32 +1,38 @@
+<div class="card-wrapper flex-center">
 
-<mat-card class="card" *ngIf="item">
+    <!-- Card -->
+    <mat-card class="material-card-element-no-padding card-with-hover-effect" *ngIf="item">
 
-    <!-- header -->
-    <mat-card-header>
+        <!-- header -->
+        <mat-card-header>
+            
+            <!-- Title -->
+            <mat-card-title class="show-pointer" (click)="onOpenDetails()"
+                title="{{item.description}}">
+                {{ item.name }}
+            </mat-card-title>
 
-        <mat-card-title class="card-header" (click)="onOpenDetails()"
-            title="{{item.description}}">
-            {{ item.name }}
-        </mat-card-title>
+            <!-- Details -->
+            <mat-card-subtitle>
 
-        <mat-card-subtitle>
+                <span>
+                    {{item.category.name}}
+                </span>
 
-            <span>
-                {{item.category.name}}
-            </span>
+                <span class="small-number">
+                    <span class="small-label">x</span>{{ item.number }}
+                </span>
 
-            <span class="item-number">
-                <span class="item-number-label">x</span>{{ item.number }}
-            </span>
+                <span *ngIf="item.imagePath">
+                    <mat-icon class="vertical-align-image">image</mat-icon>
+                </span>
 
-            <span *ngIf="item.imagePath">
-                <mat-icon class="item-image">image</mat-icon>
-            </span>
+            </mat-card-subtitle>
+            
+            <!-- Category -->
+            <div mat-card-avatar [style.background-color]="getAvatarColor()"></div>
 
-        </mat-card-subtitle>
+        </mat-card-header>
 
-        <div mat-card-avatar [style.background-color]="getAvatarColor()"></div>
-
-    </mat-card-header>
-
-</mat-card>
+    </mat-card>
+</div>
