--- a/ng-diogenes/src/app/pages/inventory/inventory.component.html
+++ b/ng-diogenes/src/app/pages/inventory/inventory.component.html
@@ -2,11 +2,15 @@
 <mat-toolbar>
     <!-- Logo and menu -->
     <mat-toolbar-row class="flex-row-spaced-apart">
+
+        <!-- Logo -->
         <div class="flex-center">
             <img class="logo" src="assets/logo/logo_transparent.png"
                 alt="Logo">
             Diogenes
         </div>
+
+        <!-- Menus -->
         <div class="flex-end">
             <button mat-icon-button aria-label="Filter" (click)="onOpenFilter()"
                 title=Filter>
@@ -25,7 +29,8 @@
 <!-- Show a add item as float action button -->
 <div class="fab-container">
     <button mat-fab color="primary"
-        (click)="onCreateNewItem()"><mat-icon>add</mat-icon></button>
+        (click)="onCreateNewItem()"><mat-icon>add</mat-icon>
+    </button>
 </div>
 
 <!-- Show inventory -->
