--- a/ng-diogenes/src/app/shared/components/error-card/error-card.component.html
+++ b/ng-diogenes/src/app/shared/components/error-card/error-card.component.html
@@ -1,4 +1,4 @@
-<div class="flex-center">
+<div class="flex-center card-wrapper">
     <mat-card class="material-card-element">
         <mat-card-header>
             <mat-card-title>
