--- a/ng-diogenes/src/app/pages/edit-item/components/edit-single-item/edit-single-item.component.html
+++ b/ng-diogenes/src/app/pages/edit-item/components/edit-single-item/edit-single-item.component.html
@@ -15,7 +15,7 @@
         <div class="flex-center card-wrapper">
             <mat-card class="material-card-element">
 
-                <mat-card-title class="flex-center material-card-title">
+                <mat-card-title class="flex-center material-card-title" *ngIf="!hideTitle">
                     {{isNewItem ? "Create new item" : "Edit item"}}
                 </mat-card-title>
 
