--- a/ng-diogenes/src/styles/alignment.scss
+++ b/ng-diogenes/src/styles/alignment.scss
@@ -29,7 +29,6 @@
     width: 100%;
 }
 
-
 .space-one-line {
     padding-top: 1rem;
 }
@@ -40,4 +39,8 @@
 
 .vertical-align-image {
     vertical-align: middle;
+}
+
+.centered-text {
+    text-align: center;
 }
