--- a/ng-diogenes/src/app/pages/edit-item/components/edit-bulk/edit-bulk.component.scss
+++ b/ng-diogenes/src/app/pages/edit-item/components/edit-bulk/edit-bulk.component.scss
@@ -1,31 +1,8 @@
-.bulk-wrapper{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.dashed-container-height {
+    min-height: 10rem;
 }
 
-.bulk-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px dashed #ccc;
-    padding: 20px;
-    margin: 20px;
-    text-align: center;
-    width: 100%;
-    max-width: 600px;
-    min-height: 200px;
-    cursor: pointer;
-}
-
-.stepper-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-.drag-over{
-    border: 4px dashed;
+// Disable the padding of the card 
+::ng-deep .mat-vertical-content {
+    padding: 0px !important;
 }
