[FIX] Fix styling of overflowing titles

--- a/ng-diogenes/src/app/pages/categories/components/category-in-list/category-in-list.component.html
+++ b/ng-diogenes/src/app/pages/categories/components/category-in-list/category-in-list.component.html
@@ -6,7 +6,9 @@
 
             <mat-card-title class="show-pointer" (click)="onOpenDetails()"
                 title="{{category.description}}">
-                {{ category.name }}
+                <span class="no-overflow-everywhere">
+                    {{ category.name }}
+                </span>
             </mat-card-title>
 
             <div mat-card-avatar [style.background-color]="getAvatarColor()"></div>
