--- a/ng-diogenes/src/app/pages/category-detail/category-detail.component.html
+++ b/ng-diogenes/src/app/pages/category-detail/category-detail.component.html
@@ -17,7 +17,9 @@
             <!-- Header -->
             <mat-card-header>
                 <mat-card-title>
-                    {{ category.name }}
+                    <span class="no-overflow-everywhere">
+                        {{ category.name }}
+                    </span>
                 </mat-card-title>
 
                 <div mat-card-avatar [style.background-color]="getAvatarColor()"></div>
