--- a/ng-diogenes/src/app/pages/inventory/inventory.component.html
+++ b/ng-diogenes/src/app/pages/inventory/inventory.component.html
@@ -5,8 +5,7 @@
 
         <!-- Logo -->
         <div class="flex-center">
-            <img class="logo" src="assets/logo/logo_transparent.png"
-                alt="Logo">
+            <app-logo></app-logo>
             Diogenes
         </div>
 
