--- a/ng-diogenes/src/app/pages/login/login.component.html
+++ b/ng-diogenes/src/app/pages/login/login.component.html
@@ -5,10 +5,7 @@
 
     <div class="login-container">
         <mat-card class="center-content">
-            <div class="logo-container">
-                <img class="logo" src="assets/logo/logo_transparent.png"
-                    alt="Logo">
-            </div>
+            <app-logo [isLink]="false"></app-logo>
             <form (ngSubmit)="login()" [formGroup]="form">
                 <mat-form-field class="form-group">
                     <mat-label for="username">Username</mat-label>
