--- a/ng-diogenes/src/app/pages/edit-item/edit-item.component.html
+++ b/ng-diogenes/src/app/pages/edit-item/edit-item.component.html
@@ -1,8 +1,7 @@
 <mat-toolbar>
     <mat-toolbar-row>
-        <button mat-button (click)="onNavigateBack()">
-            <mat-icon>arrow_back</mat-icon>
-        </button>
+        <app-go-back></app-go-back>
+        Edit item
     </mat-toolbar-row>
 </mat-toolbar>
 
