--- a/ng-diogenes/src/app/pages/inventory/inventory.component.html
+++ b/ng-diogenes/src/app/pages/inventory/inventory.component.html
@@ -3,10 +3,10 @@
     <!-- Logo and menu -->
     <mat-toolbar-row class="flex-row-spaced-apart">
 
-        <!-- Logo -->
+        <!-- Title -->
         <div class="flex-center">
-            <app-logo></app-logo>
-            Diogenes
+            <app-go-back></app-go-back>
+            Items
         </div>
 
         <!-- Menus -->
@@ -36,13 +36,14 @@
 <div *ngIf="isLoading; else notLoading">
     <app-loading-spinner></app-loading-spinner>
 </div>
+
 <ng-template #notLoading>
 
     <!-- Infinite scroll -->
     <div infiniteScroll (scrolled)="onScroll()"
         [infiniteScrollDistance]="0.5"
         [infiniteScrollDisabled]="lastPage" id="item-list"
-        *ngIf="items; else noItems">
+        *ngIf="isItemsListNotEmpty(); else noItems">
         <div *ngFor="let item of items">
             <app-item-in-list [item]="item"></app-item-in-list>
         </div>
@@ -56,7 +57,7 @@
     <!-- Empty list -->
     <ng-template #noItems>
         <app-error-card [title]="'No items found'" [icon]="'error'"
-            [content]="'There are no items in the inventory yet.'"></app-error-card>
+            [content]="'There are no items in the inventory yet for the given filters.'"></app-error-card>
     </ng-template>
 
 </ng-template>
